; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_asn1.c_asn1_tag_decode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_asn1.c_asn1_tag_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asn1_ctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (%struct.asn1_ctx*, i32*)* @asn1_tag_decode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @asn1_tag_decode(%struct.asn1_ctx* %0, i32* %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca %struct.asn1_ctx*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8, align 1
  store %struct.asn1_ctx* %0, %struct.asn1_ctx** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %23, %2
  %9 = load %struct.asn1_ctx*, %struct.asn1_ctx** %4, align 8
  %10 = call i32 @asn1_octet_decode(%struct.asn1_ctx* %9, i8* %6)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %8
  store i8 0, i8* %3, align 1
  br label %29

13:                                               ; preds = %8
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %14, align 4
  %16 = shl i32 %15, 7
  store i32 %16, i32* %14, align 4
  %17 = load i8, i8* %6, align 1
  %18 = zext i8 %17 to i32
  %19 = and i32 %18, 127
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %20, align 4
  %22 = or i32 %21, %19
  store i32 %22, i32* %20, align 4
  br label %23

23:                                               ; preds = %13
  %24 = load i8, i8* %6, align 1
  %25 = zext i8 %24 to i32
  %26 = and i32 %25, 128
  %27 = icmp eq i32 %26, 128
  br i1 %27, label %8, label %28

28:                                               ; preds = %23
  store i8 1, i8* %3, align 1
  br label %29

29:                                               ; preds = %28, %12
  %30 = load i8, i8* %3, align 1
  ret i8 %30
}

declare dso_local i32 @asn1_octet_decode(%struct.asn1_ctx*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
